--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.2",
     "reactotron-react-native": "^4.0.3",
     "styled-components": "^5.0.1"
