--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-iphone-x-helper": "^1.2.1",
+    "react-native-qrcode": "^0.2.7",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
